# fastapi

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  alembic.ini  crud.py  database.py  docker-compose.yml  entry.sh  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db
alembic/versions/: acbde92c7a3c_baseline.py
poetry_demo/: .env  alembic.ini  crud.py  database.py  main.py  models.py  schemas.py
poetry_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
poetry_demo/Migrations/: env.py
poetry_demo/Migrations/versions/: 1c13284f2007_add_categories_and_products_table.py  3429116eae15_products_table.py  5b06281c58ae_users_table.py  a167c47db23e_categories_table.py  a9aa6c26a6b1_add_a_column_to_product.py  d58e497eaeae_products_table.py  e33f55c81eda_categories_table.py  fbee1d8d1ad0_users_table.py
poetry_demo/categoryapp/: cat_views.py  models.py  schemas.py
poetry_demo/productapp/: models.py  pro_views.py  schemas.py
poetry_demo/userapp/: crud.py  models.py  schemas.py  views.py
