[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["prabin karki"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
SQLAlchemy = "^1.3.19"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
databases = {extras = ["sqlite"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
